Sample 19 and 18 for demo

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,6 +3,29 @@ title: List of Examples
 ---
 <div class="row">
   <div class="col-12">
+    <table class="table table-light">
+      <tbody>
+      <tr>
+        <td colspan="2">
+          Object stability in Augmented Reality using Javascript depends on marker/webcam moment.
+          <a href="https://aframe.io/blog/arjs/#move-the-camera-or-the-marker" target="_blank">https://aframe.io/blog/arjs/#move-the-camera-or-the-marker</a>
+        </td>
+      </tr>
+      <tr>
+        <td><%= link_to 'Sample18', '/sample18.html' %></td>
+        <td>Using marker camera <code>&lt;a-marker-camera&gt;</code>. camera is moving and the marker is static </td>
+      </tr>
+      <tr>
+        <td><%= link_to 'Sample19', '/sample19.html' %></td>
+        <td>Using entity camera <code>&lt;a-entity camera&gt;</code>. camera is static at all times while the objects or markers are moving</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col-12">
     <table class="table">
       <tbody>
       <tr>
@@ -75,7 +98,7 @@ title: List of Examples
       </tr>
       <tr>
         <td><%= link_to 'Sample15', '/sample15.html' %></td>
-        <td>AR.js sample using Square.patt</td>
+        <td>AR.js sample using Square.patt(working demo)</td>
       </tr>
       <tr>
         <td><%= link_to 'Sample16', '/sample16.html' %></td>
@@ -89,7 +112,7 @@ title: List of Examples
       <tbody>
       <tr>
         <td><%= link_to 'Sample17', '/sample17.html' %></td>
-        <td>AR.js webcam moving event</td>
+        <td>Development</td>
       </tr>
       </tbody>
     </table>
