added qr corner square

--- a/source/sample14.html.erb
+++ b/source/sample14.html.erb
@@ -19,6 +19,7 @@ layout: false
   <script src="https://threejs.org/build/three.js"></script>
   <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
   <script src="https://threejs.org/examples/js/loaders/GLTFLoader.js"></script>
+  <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
   <script src="https://cozmo.github.io/jsQR/jsQR.js"></script>
   <style type="text/css">
     html, body {
@@ -141,6 +142,7 @@ layout: false
         scale = 1 / (bbox.max.x - bbox.min.x);
         scale = scale * 2;
         gltfScene.scale.set(scale, scale, scale);
+        gltfScene.rotation.set(45, 45, 0);
         gltfScene.position.set(0, 0, 0);
         scene.add(gltfScene);
 
@@ -148,6 +150,8 @@ layout: false
         gltf.animations.forEach(function (clip) {
           mixer.clipAction(clip).play();
         });
+
+        scene.add(mixer);
 
       }, function (xhr) {
 
