Added sample 20 with Hiro 512x512

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -19,6 +19,10 @@ title: List of Examples
         <td><%= link_to 'Sample19', '/sample19.html' %></td>
         <td>Using entity camera <code>&lt;a-entity camera&gt;</code>. camera is static at all times while the objects or markers are moving</td>
       </tr>
+      <tr>
+        <td><%= link_to 'Sample20', '/sample20.html' %></td>
+        <td>This example using 512x512 marker. To Rotate and Scale with USER input</td>
+      </tr>
       </tbody>
     </table>
   </div>
