--- a/source/sample20.html.erb
+++ b/source/sample20.html.erb
@@ -132,7 +132,7 @@ layout: false
   </ul>
 </div>
 <div id="buttom">
-  <input id="buttomSlider" type="range" min="-100" max="100" step="25" value="0" data-orientation="horizontal"/>
+  <input id="buttomSlider" type="range" min="-100" max="100" step="1" value="0" data-orientation="horizontal"/>
 </div>
 <div id="right">
   <input id="rightSlider" type="range" min="-100" max="100" step="5" value="0" data-orientation="vertical"/>
@@ -195,16 +195,16 @@ layout: false
       $('#buttomSlider').rangeslider({
         polyfill: false,
         onSlide: function (position, value) {
-          var angle = 0;
+          var angle = -90;
           if (value == 0) {
-            angle = 0;
+            angle = -90;
           } else if (value >= 1) {
-            angle = (180 * value)/100;
+            angle = objectEntity.object3D.rotation.y + ((180 * value)/100);
           } else if (value <= 1) {
             angle = (180 * value)/100;;
           }
           console.log(value, angle);
-          objectEntity.object3D.rotateY(angle);
+          objectEntity.setAttribute('rotation', {x: 0, y: angle, z: 0});
         }
       });
     });
