--- a/source/sample20.html.erb
+++ b/source/sample20.html.erb
@@ -123,8 +123,9 @@ layout: false
 
 <div id="objects">
   <ul>
-    <li><a id="sample01">Sample 01</a></li>
-    <li><a id="sample02">Sample 02</a></li>
+    <li><a id="sample01" class="sample">Sample 01</a></li>
+    <li><a id="sample02" class="sample">Sample 02</a></li>
+    <li><a id="sample03" class="sample">Sample 03</a></li>
     <li class="divider">
       <hr/>
     </li>
@@ -144,11 +145,11 @@ layout: false
 
     data = {
       'orange': 'https://cdn.rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF/Duck.gltf',
-      'blue': 'https://cdn.rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/BoxAnimated/glTF/BoxAnimated.gltf',
-      'green': 'https://cdn.rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/CesiumMan/glTF/CesiumMan.gltf',
+      'sample02': 'https://cdn.rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/BoxAnimated/glTF/BoxAnimated.gltf',
+      'sample01': 'https://cdn.rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/CesiumMan/glTF/CesiumMan.gltf',
       'pink': 'https://cdn.rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/RiggedSimple/glTF/RiggedSimple.gltf',
       'yellow': 'https://cdn.rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/Monster/glTF/Monster.gltf',
-      'red': 'https://cdn.rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/BrainStem/glTF/BrainStem.gltf'
+      'sample03': 'https://cdn.rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/BrainStem/glTF/BrainStem.gltf'
     };
 
     $('#clear-object').click(function () {
@@ -164,7 +165,7 @@ layout: false
     // Default gltf model
     objectEntity.setAttribute('gltf-model', 'url(https://cdn.rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/CesiumMan/glTF/CesiumMan.gltf)');
 
-    $('#sample01').click(function () {
+    /*$('#sample01').click(function () {
       resetSliders();
       objectEntity.setAttribute('gltf-model', 'url(https://cdn.rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/CesiumMan/glTF/CesiumMan.gltf)');
     });
@@ -172,7 +173,15 @@ layout: false
     $('#sample02').click(function () {
       resetSliders();
       objectEntity.setAttribute('gltf-model', 'url(https://cdn.rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/BoxAnimated/glTF/BoxAnimated.gltf)');
+    });*/
+
+    $('.sample').click(function () {
+      resetSliders();
+      var gltfModel = data[this.id];
+      console.log(this.id);
+      objectEntity.setAttribute('gltf-model', 'url(' + gltfModel + ')');
     });
+
 
     $(function () {
       $('#rightSlider').rangeslider({
@@ -182,9 +191,9 @@ layout: false
           if (value == 0) {
             scale = 1;
           } else if (value >= 1) {
-            scale = 1 + ((1 * value)/100);
+            scale = 1 + ((1 * value) / 100);
           } else if (value <= 1) {
-            scale = 1 - ((-0.75 * value)/100);
+            scale = 1 - ((-0.75 * value) / 100);
           }
           //console.log(value, scale);
           scale = THREE.Math.clamp(scale, 0.25, 3);
@@ -199,9 +208,10 @@ layout: false
           if (value == 0) {
             angle = -90;
           } else if (value >= 1) {
-            angle = objectEntity.object3D.rotation.y + ((180 * value)/100);
+            angle = objectEntity.object3D.rotation.y + ((180 * value) / 100);
           } else if (value <= 1) {
-            angle = (180 * value)/100;;
+            angle = (180 * value) / 100;
+            ;
           }
           console.log(value, angle);
           objectEntity.setAttribute('rotation', {x: 0, y: angle, z: 0});
